# nyc-taxi-duration-mlops

./: .gitignore  .pre-commit-config.yaml  New_Learnings_Skills_Gained.md  README.md  justfile  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci-sovereign-guard.yml
docs/: global_manifesto.md
docs/01_Architecture_Strategy/: hexagonal_layers.md  platform_vision.md
docs/02_Domain_Core/: unified_entity.md  validation_invariants.md
docs/03_Infrastructure_Adapters/: data_ingestion.md  experiment_tracking.md  prediction_protocol.md
docs/04_Quality_Assurance/: error_codes.md  testing_strategy.md
notebooks/: duration-prediction.ipynb
src/: config.py
src/core/domain/: __init__.py  factories.py
tests/: test_trip_model.py
tests/property_based/: test_entities_pbt.py
