[project]
name = "nyc-taxi-duration-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "fastparquet>=2025.12.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
]
